# anlg

./: .gitignore  README.md  anlg.code-workspace  docker-compose.yml
.github/workflows/: api.yml
api/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev
api/.cargo/: config
api/src/: gcdatastore.rs  gcp.rs  lib.rs  main.rs  middlewares.rs  repository.rs  schema.rs  service.rs
api/src/clients/: gcdatastore.rs  gpt.rs  mod.rs
api/src/schema/: chat.rs  mod.rs  mutation.rs  note.rs  query.rs  user_log.rs
datastore/: Dockerfile  entrypoint  index.yml
firestore/: Dockerfile
front/: Dockerfile  codegen.yml  index.html  package.json  pnpm-lock.yaml
front/src/: config.ts  hashChanger.ts  index.css  main.tsx  time.ts  urql.ts
front/src/components/: App.tsx  Button.tsx  ChatList.tsx  Dialog.tsx  Notes.tsx  PostButton.tsx
front/src/components/App/: App.tsx  index.module.scss  index.tsx
front/src/components/Dialog/: index.module.scss  index.tsx
front/src/components/Notes/: index.module.scss  index.tsx
front/src/components/PostButton/: index.module.scss  index.tsx
front/src/components/Test/: index.module.scss  index.tsx
front/src/gql/: gql.ts  graphql.ts
