[package]
name = "anlg-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "6.0.6", features = ["chrono", "log"] }
async-graphql-actix-web = "6.0.6"
actix-web = { version = "4.4.0", default-features = false, features = ["http2", "macros"] }
actix-cors = "0.6.4"
actix-web-httpauth = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.21"
rustls = "0.21"
rustls-pemfile = "1.0"
log = "0.4"
env_logger = "0.10"
gptcl = { git = "https://github.com/carrotflakes/gptcl.git", rev = "9598e1ab0d01d775fa1f6380387dd6ee2d3ff0ae" }
gptcl-hyper = { git = "https://github.com/carrotflakes/gptcl.git", rev = "9598e1ab0d01d775fa1f6380387dd6ee2d3ff0ae" }
#datastore = { path = "./datastore" }
firestore = "0.42"
futures = "0.3"
